apps/monitoring/prometheus-stack/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - "prometheus.pawked.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-stack-kube-prom-prometheus
          port: 9090
          kind: Service
          group: ''
          weight: 1
